--- a/bazireverse.html
+++ b/bazireverse.html
@@ -337,8 +337,9 @@
   <button id="btn">Possible Dates</button>
   <ul id="result-date"></ul>
   <ol>
-    <li>Here bazi is assumed to be in local apparent time (LAT, 真太陽時)</li>
-    <li>The finding date & time display in local mean time (LMT, 平太陽時)</li>
+    <li>All resultes in <strong>prophetic Gregorian calendar</strong></li>
+    <li>Here bazi is assumed to be in <strong>local apparent time</strong> (LAT, 真太陽時)</li>
+    <li>The finding date & time display in <strong>local mean time</strong> (LMT, 平太陽時)</li>
     <li>Longitude is essential to the calculation.</li>
   </ol>
   <script src="./javascript/astronomy.browser.min.js"></script>
