--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
         </li>
         <li>
 
+          <a href="starmap.html">Star map</a>
+          <p>Simple <strong>star map</strong>. Reconstruct from the work of <a
+              href="http://tonightsky.free.fr/all-sky-map/">Thomas Boch's sky map</a>. Using <a
+              href="https://github.com/cosinekitty/astronomy/tree/master">Astronomy
+              Engine</a> for all the calculations.</p>
+        </li>
+        <li>
+
           <a href="geocentric.html">Geocentric Solar System Animation</a>
           <p>Just a very simple animation. Not the real motions.</p>
         </li>
@@ -45,7 +53,6 @@
       all the
       astronomy-related calculation.</p>
   </article>
-  <footer>This page produced by YCHANG (yingch_96@proton.me), last updated October, 2023</footer>
 </body>
 
 </html>
