try with mobile support

--- a/starmap.html
+++ b/starmap.html
@@ -5,12 +5,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Star Map</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/starmap.css">
-
-
-
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
