canvas's size unfix

--- a/starmap.html
+++ b/starmap.html
@@ -17,7 +17,7 @@
     Stars data have been extracted from the <a href="http://cdsarc.u-strasbg.fr/viz-bin/Cat?V/50">Bright Star
       Catalogue</a>
   </div> -->
-  <canvas id="canvas" width="700" height="700"></canvas>
+  <canvas id="canvas"></canvas>
   <div>
     <div class="checkbox-group">
       <input type="checkbox" checked id="drawgrid" /><label for="drawgrid">Display coordinates grid</label><br />
