shrink the table in star map

--- a/starmap.html
+++ b/starmap.html
@@ -45,7 +45,7 @@
       <label for="gridEclipticOfDate">Grid: Ecliptic (of date)</label><br />
     </div>
   </div>
-  <table cellpadding="5" cellspacing="0" border="1">
+  <table cellpadding="5" border="1">
     <tr>
       <!-- <td>
         <div>Date and Time:</div>
