charting after reverse chartinfo

--- a/chartreverse.html
+++ b/chartreverse.html
@@ -171,8 +171,7 @@
         find the minimum Diff of Moon.</small></li>
 
   </ol>
-  <script src="./javascript/astronomy.browser.min.js"></script>
-  <script src="./javascript/chartre.js"></script>
+  <script src="./javascript/chartre.js" type="module"></script>
 </body>
 
 </html>
