--- a/julian.html
+++ b/julian.html
@@ -59,7 +59,7 @@
     <div class="tjd-button-container">
       <button type="button" onclick="updateTimeFromUT()">🔼Convert🔼</button>
       <form class='tjdForm'>
-        <div class="formInput"> <label for="utInput">UT</label>
+        <div class="formInput"> <label for="utInput">UT (Universal Time)</label>
           <input type="number" id="utInput" class="input-number" value="0" step=0.000001>
         </div>
       </form>
@@ -72,8 +72,22 @@
 
       <form class='tjdForm'>
         <div>
-          <div class="formInput"><label for="ttInput">TT</label>
+          <div class="formInput"><label for="ttInput">TT (Terrestrial Time)</label>
             <input type="number" class="input-number" id="ttInput" value="0" step=0.000001>
+          </div>
+        </div>
+      </form>
+    </div>
+
+  </div>
+  <div class="tjd">
+    <div class="tjd-button-container">
+      <button type="button" onclick="updateTimeFromTSSec()">🔼Convert🔼</button>
+
+      <form class='tjdForm'>
+        <div>
+          <div class="formInput"><label for="tssInput">Timestamp (sec)</label>
+            <input type="number" class="input-number" id="tssInput" value="0" step=0.000001>
           </div>
         </div>
       </form>
@@ -83,7 +97,7 @@
 
       <form class='tjdForm'>
         <div>
-          <div class="formInput"><label for="tsInput">Timestamp (to milli)</label>
+          <div class="formInput"><label for="tsInput">Timestamp (millisec)</label>
             <input type="number" class="input-number" id="tsInput" value="0" step=0.000001>
           </div>
         </div>
