--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </ul>
     </nav>
   </header>
+  <a href="index2.html">test</a>
   <article>
     <p>Some simple tools. Using <a href="https://github.com/cosinekitty/astronomy/tree/master">Astronomy Engine</a> for
       all the
