add sub sun point

--- a/moon.html
+++ b/moon.html
@@ -25,7 +25,8 @@ distance in km: <span id="distance"></span>
 <!-- 创建一个按钮 -->
 
 <br>
-<input type="checkbox" id="shadow"> include shadow<input type="checkbox" id="helper-point"> Helper Point
+<input type="checkbox" id="shadow"> include shadow<input type="checkbox" id="sub-earth"> sub-earth point
+<input type="checkbox" id="sub-sun"> sub-sun point
 <input type="checkbox" id="pa-exclude"> Exclude position angle
 <br>
 -precision: less than 15 arc second in lat, and less than 7 arc second in lon. within 1900-2050.
