use light-weight moon model

--- a/moon.html
+++ b/moon.html
@@ -25,12 +25,14 @@ distance in km: <span id="distance"></span>
 <!-- 创建一个按钮 -->
 
 <br>
-<input type="checkbox" id="shadow"> include shadow<input type="checkbox" id="sub-earth"> sub-earth point
 <input type="checkbox" id="sub-sun"> sub-sun point
+<input type="checkbox" id="sub-earth"> sub-earth point
 <input type="checkbox" id="pa-exclude"> Exclude position angle
+<input type="checkbox" id="shadow"> Exclude shadow
 <br>
--precision: less than 15 arc second in lat, and less than 7 arc second in lon. within 1900-2050.
-Horizon: <span id="horizon" class="horizon">equator</span>
+-sub-earth lon/sub-sun lat's error is less than 20 arc min; sub-earth lat/sub-sun's lon eror in less than half arc min
+between 1900-2050 (compared to de421).
+<br>Horizon: <span id="horizon" class="horizon">equator</span>
 
 <script type="module" src="/javascript/moon.js"></script>
 </body>
